--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="menu_about">About</string>
     <string name="is_completed">Item is completed</string>
   <string name="created_on">Created on:</string>
+    <string name="desc">Description</string>
+    <string name="notes">Notes</string>
 </resources>
