--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
   <string name="created_on">Created on:</string>
     <string name="desc">Description</string>
     <string name="notes">Notes</string>
+    <string name="menu_save">Save</string>
 </resources>
