--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
   <string name="app_name">ToDo</string>
     <string name="msg_empty">Click the + icon to add a todo item!</string>
+    <string name="msg_empty_filtered">Click the + icon to add a todo item, or change your filter to show other items</string>
     <string name="menu_about">About</string>
     <string name="is_completed">Item is completed</string>
   <string name="created_on">Created on:</string>
@@ -9,4 +10,8 @@
     <string name="menu_save">Save</string>
     <string name="menu_add">Add</string>
   <string name="menu_delete">Delete</string>
+    <string name="menu_filter">Filter</string>
+  <string name="menu_filter_all">All</string>
+  <string name="menu_filter_completed">Completed</string>
+  <string name="menu_filter_outstanding">Outstanding</string>
 </resources>
