--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="msg_saved">Your Web page is saved!</string>
     <string name="menu_share">Share</string>
     <string name="msg_share_fail">Nothing knows how to share a Web page!</string>
+    <string name="settings">Settings</string>
+    <string name="web_service_url_key">webServiceUrl</string>
+    <string name="web_service_url_default">https://commonsware.com/AndExplore/items.json</string>
+    <string name="pref_url_title">Web service URL</string>
 </resources>
